# CollectGame

./: CMakeLists.txt  README.md
design/: README.md  class_diagram.dia
exe/src/: CMakeLists.txt  main.cpp
exe/src/control/game/: donecmd.cpp  donecmd.h  gameviewcmd.cpp  gameviewcmd.h  movedowncmd.cpp  movedowncmd.h  movedownleftcmd.cpp  movedownleftcmd.h  movedownrightcmd.cpp  movedownrightcmd.h  moveleftcmd.cpp  moveleftcmd.h  moverightcmd.cpp  moverightcmd.h  moveupcmd.cpp  moveupcmd.h  moveupleftcmd.cpp  moveupleftcmd.h  moveuprightcmd.cpp  moveuprightcmd.h  pickfirstitemcmd.cpp  pickfirstitemcmd.h  pickitemncmd.cpp  pickitemncmd.h  startnewcmd.cpp  startnewcmd.h  submenugamecmd.cpp  submenugamecmd.h
exe/src/control/parameters/: parametersviewcmd.cpp  parametersviewcmd.h  setgridsizecmd.cpp  setitemmaxvaluecmd.cpp  setitemmaxweightcmd.cpp  setplayeritemcountlimitcmd.cpp  setplayeritemcountlimitcmd.h  setplayerweightlimitcmd.cpp  setratioedgecountvsgridspotcountcmd.cpp  setratioedgecountvsgridspotcountcmd.h  setratioitemcountvsnodecountcmd.cpp  setrationodecountvsgridspotcountcmd.cpp  setrationodecountvsgridspotcountcmd.h  submenuparameterscmd.cpp  submenuparameterscmd.h
exe/src/control/parametersModification/: setgridsizecmd.cpp  setgridsizecmd.h  setitemmaxvaluecmd.cpp  setitemmaxvaluecmd.h  setitemmaxweightcmd.cpp  setitemmaxweightcmd.h  setplayeritemcountlimitcmd.cpp  setplayeritemcountlimitcmd.h  setplayerweightlimitcmd.cpp  setplayerweightlimitcmd.h  setratioedgecountvsgridspotcountcmd.cpp  setratioedgecountvsgridspotcountcmd.h  setratioitemcountvsnodecountcmd.cpp  setratioitemcountvsnodecountcmd.h  setrationodecountvsgridspotcountcmd.cpp  submenuparameterscmd.cpp  submenuparameterscmd.h
exe/src/model/game/: collectgame.cpp  collectgame.h  gameparameters.cpp  gameparameters.h  player.cpp  player.h
exe/src/model/item/: item.cpp  item.h  itemholder.h  items.cpp  items.h
exe/src/model/map/: array2d.h  map.cpp  map.h  nodegraph.cpp  nodegraph.h
exe/src/model/node/: absentnode.cpp  absentnode.h  candidatenode.cpp  candidatenode.h  existingnode.cpp  existingnode.h  node.cpp  node.h  nodestate.cpp  nodestate.h
exe/test/: CMakeLists.txt  nodeTest.cpp
exe/test/control/parametersModification/: setgridsizecmdTest.cpp
exe/test/model/game/: collectgameTest.cpp  gamepropertiesTest.cpp  playerTest.cpp
exe/test/model/item/: itemTest.cpp  itemsTest.cpp
exe/test/model/map/: mapTest.cpp  nodegraphTest.cpp
exe/test/model/node/: nodeTest.cpp
exe/test/model/node/mockup/: nodesignaltester.cpp  nodesignaltester.h
libConsoleView/: CMakeLists.txt  README.md
libConsoleView/src/: CMakeLists.txt  commanddisplaymenudefault.cpp  commanddisplaymenudefault.h  commandquitdefault.cpp  commandquitdefault.h  consolecommand.h  consolecommandbase.cpp  consolecommandbase.h  consoleview.cpp  consoleview.h
libConsoleView/test/: README.md
libConsoleView/test/boost/: CMakeLists.txt  consolecommandbaseTest.cpp  consoleviewTest.cpp
libConsoleView/test/boost/mockup/: commanddisplaymockupmodelview.h  commandsetvaluemockupmodel.h  consolecommandbaseInheritance.cpp  consolecommandbaseInheritance.h  demo.cpp  modelMockup.h
